--- a/massinform/notify/templates/notify/notify.html
+++ b/massinform/notify/templates/notify/notify.html
@@ -26,6 +26,7 @@
 {% block body %}
 	<a href="/index/"><span class="glyphicon glyphicon-home" id="homebutton"></span></a>
 	<a href="/logoff/"><span class="glyphicon glyphicon-off" id="signout"></span></a>
+<div class="container-fluid">
 	<div class="row">
 		<div class="col-md-6 col-md-offset-3">
 		</br>
@@ -67,4 +68,5 @@
 			</div> <!--contactlist panel -->
 		</div> <!-- column -->
 	</div> <!-- row -->
+</div> <!-- container -->
 {% endblock %}
