--- a/massinform/templates/base.html
+++ b/massinform/templates/base.html
@@ -8,7 +8,7 @@
 		<!-- <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css"> -->
 		{% load staticfiles %}
 		<link rel="shortcut icon" type="image/png" href="{% static "favicon.ico" %}"/>
-		<title>MassInform</title>
+		<title>{% block title %}MassInform{% endblock %}</title>
 
 		<style>
 			body{
