--- a/massinform/usermanage/templates/usermanage/change_password.html
+++ b/massinform/usermanage/templates/usermanage/change_password.html
@@ -56,7 +56,7 @@
                     <div class="form-group">
                 {% endif %}
                     <label for="oldpassword">Old Password</label>
-                    <input type="password" class="form-control" id="oldpassword" name="oldpassword" value={{ oldpassword_init }}>
+                    <input type="password" class="form-control" id="oldpassword" name="oldpassword" value="{{ oldpassword_init }}">
                 {% if "wrong_password" in issues or "user_inactive" in issues %}
                     <span class="glyphicon glyphicon-remove form-control-feedback"></span>
                 {% elif not first %}
@@ -72,7 +72,7 @@
                     <div class="form-group">
                 {% endif %}
                     <label for="newpassword">New Password</label>
-                    <input type="password" class="form-control" id="newpassword" name="newpassword" value={{ newpassword_init }}>
+                    <input type="password" class="form-control" id="newpassword" name="newpassword" value="{{ newpassword_init }}">
                 {% if "password_length" in issues %}
                     <span class="glyphicon glyphicon-remove form-control-feedback"></span>
                 {% elif not first %}
