--- a/massinform/templates/base.html
+++ b/massinform/templates/base.html
@@ -2,11 +2,17 @@
 <html lang="en">
 	<head>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
+		{% load staticfiles %}
+		<!--
 		<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 		<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-		<!-- <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css"> -->
+		-->
 		{% load staticfiles %}
+		<link rel="stylesheet" href="{% static "bootstrap-3.3.5-dist/css/bootstrap.min.css" %}">
+		<script src="{% static "jquery2_1_4.js" %}"></script>
+		<script src="{% static "bootstrap-3.3.5-dist/js/bootstrap.min.js" %}"></script>
+		<!-- <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css"> -->
 		<link rel="shortcut icon" type="image/png" href="{% static "favicon.ico" %}"/>
 		<title>{% block title %}MassInform{% endblock %}</title>
 
