--- a/massinform/notify/templates/notify/notify.html
+++ b/massinform/notify/templates/notify/notify.html
@@ -23,6 +23,24 @@
 	}
 {% endblock %}
 
+{% block script %}
+$(document).ready(function(){
+	//Scripts for processing new contact creations
+	$(".createbtn").click(function(event){
+		var clist_id = $(this).attr('id');
+		clist_id.replace('-createbtn', '');
+
+		//Create table rows
+		var firstname;
+		var lastname;
+		var phonenumber;
+		var email;
+		var newrow_html = "<tr><td>" + firstname + "</td><td>" + lastname + "</td><td>" + phonenumber + "</td><td>" + email + "</td><td><button type='button' class='btn btn-default btn-xs' style='margin-right: -10px;' class='removeContact' id='" + clist_id + "-removecontact'><span class="glyphicon glyphicon-remove"></span></button></span></td></tr>"
+		$("#" + clist_id + "-table").prepend(newrow_html)
+	});
+});
+{% endblock %}
+
 {% block body %}
 	<a href="/index/"><span class="glyphicon glyphicon-home" id="homebutton"></span></a>
 	<a href="/logout/"><span class="glyphicon glyphicon-off" id="signout"></span></a>
@@ -55,27 +73,29 @@
   								</tr>
 							</thead>
 							<tbody>
-								{% for c in clist.contacts %}
-						    	<tr>
-						    		<td>c.firstname</td>
-						        	<td>c.lastname</td>
-						        	<td>c.phonenumber</td>
-						        	<td>c.email</td>
-						        	<td><button type="button" class="btn btn-default btn-xs" style="margin-right: -10px;" id="removeContact">
-	      								<span class="glyphicon glyphicon-remove"></span>
-	    							</button></span></td>
-						      	</tr>
-						      	{% endfor %}
-						      	<tr>
-						      		<form>
-						      			<td><input type="text" pattern="[A-Za-z]{4-50}" id="new_firstname" title="First Name must only have letters and space. It must be 4-50 characters long."></td>
-						      			<td><input type="text" id="new_lastname"></td>
-						      			<td><input type="text" id="new_phonenumber"></td>
-						      			<td><input type="text" id="new_email"></td>
-						      			<td><button type="submit" value="login" class="btn btn-small btn-accept"><span class="glyphicon glyphicon-plus"></span> Create Contact</button></td>
-						      		</form>
-						      	</tr>
-						      </tbody>
+								<div id="{{ clist.id }}-table">
+									{% for c in clist.contacts %}
+							    	<tr>
+							    		<td>c.firstname</td>
+							        	<td>c.lastname</td>
+							        	<td>c.phonenumber</td>
+							        	<td>c.email</td>
+							        	<td><button type="button" class="btn btn-default btn-xs" style="margin-right: -10px;" id="removeContact">
+		      								<span class="glyphicon glyphicon-remove"></span>
+		    							</button></span></td>
+							      	</tr>
+							      	{% endfor %}
+							      	<tr>
+							      		<form>
+							      			<td><input type="text" pattern="[A-Za-z]{4-50}" id="{{ clist.id }}-firstname" title="First Name must only have letters and space. It must be 4-50 characters long."></td>
+							      			<td><input type="text" id="{{ clist.id }}-lastname"></td>
+							      			<td><input type="text" id="{{ clist.id }}-phonenumber"></td>
+							      			<td><input type="text" id="{{ clist.id }}-email"></td>
+							      			<td><button type="submit" value="login" class="btn btn-small btn-accept" id="{{ clist.id }}-createbtn" class="createbtn"><span class="glyphicon glyphicon-plus"></span> Create Contact</button></td>
+							      		</form>
+							      	</tr>
+							    </div>
+						    </tbody>
 						</table>
 					</div> <!-- contactlist panel content -->
 			</div> <!--contactlist panel -->
