--- a/massinform/notify/templates/notify/notify.html
+++ b/massinform/notify/templates/notify/notify.html
@@ -25,18 +25,31 @@
 
 {% block script %}
 $(document).ready(function(){
+	//Define variables
+	var existing_emails_and_numbers = new Array();
+	{% for clist in contactlists %}
+		{% for c in clist.contacts%}
+			existing_emails_and_numbers.splice(existing_emails_and_numbers.length - 1, 0, '{{ c.phonenumber }}');
+			existing_emails_and_numbers.splice(existing_emails_and_numbers.length - 1, 0, '{{ c.email }}');
+		{% endfor %}
+	{% endfor %}
 	//Scripts for processing new contact creations
 	$(".createbtn").click(function(event){
+		event.preventDefault();
 		var clist_id = $(this).attr('id');
-		clist_id.replace('-createbtn', '');
-
+		clist_id = clist_id.replace('-createbtn', '');
 		//Create table rows
-		var firstname;
-		var lastname;
-		var phonenumber;
-		var email;
-		var newrow_html = "<tr><td>" + firstname + "</td><td>" + lastname + "</td><td>" + phonenumber + "</td><td>" + email + "</td><td><button type='button' class='btn btn-default btn-xs' style='margin-right: -10px;' class='removeContact' id='" + clist_id + "-removecontact'><span class="glyphicon glyphicon-remove"></span></button></span></td></tr>"
-		$("#" + clist_id + "-table").prepend(newrow_html)
+		alert('1')
+		var firstname = $('#' + clist_id + "-firstname").val();
+		var lastname = $('#' + clist_id + "-lastname").val();
+		var phonenumber = $('#' + clist_id + "-phonenumber").val();
+		var email = $('#' + clist_id + "-email").val();
+
+		//Add table to server database
+		alert('yo1');
+		$.get("/notify/createcontact/", {contactlist: clist_id, new_firstname: firstname, new_lastname: lastname, new_phonenumber: phonenumber, new_email: email}, function(data){
+			alert('yo');
+		});
 	});
 });
 {% endblock %}
@@ -62,7 +75,7 @@ $(document).ready(function(){
 						<small style="float: right;">Contact List</small></h4>
 				</div>
 					<div class="panel-body">
-						<table class="table table-hover">
+						<table class="table table-hover" id="table">
 							<thead>
 								<tr>
 	  								<th>First Name</th>
@@ -73,13 +86,12 @@ $(document).ready(function(){
   								</tr>
 							</thead>
 							<tbody>
-								<div id="{{ clist.id }}-table">
 									{% for c in clist.contacts %}
 							    	<tr>
-							    		<td>c.firstname</td>
-							        	<td>c.lastname</td>
-							        	<td>c.phonenumber</td>
-							        	<td>c.email</td>
+							    		<td>{{ c.firstname }}</td>
+							        	<td>{{ c.lastname }}</td>
+							        	<td>{{ c.phonenumber }}</td>
+							        	<td>{{ c.email }}</td>
 							        	<td><button type="button" class="btn btn-default btn-xs" style="margin-right: -10px;" id="removeContact">
 		      								<span class="glyphicon glyphicon-remove"></span>
 		    							</button></span></td>
@@ -87,14 +99,13 @@ $(document).ready(function(){
 							      	{% endfor %}
 							      	<tr>
 							      		<form>
-							      			<td><input type="text" pattern="[A-Za-z]{4-50}" id="{{ clist.id }}-firstname" title="First Name must only have letters and space. It must be 4-50 characters long."></td>
-							      			<td><input type="text" id="{{ clist.id }}-lastname"></td>
-							      			<td><input type="text" id="{{ clist.id }}-phonenumber"></td>
-							      			<td><input type="text" id="{{ clist.id }}-email"></td>
-							      			<td><button type="submit" value="login" class="btn btn-small btn-accept" id="{{ clist.id }}-createbtn" class="createbtn"><span class="glyphicon glyphicon-plus"></span> Create Contact</button></td>
+							      			<td><input type="text" pattern="[A-Za-z]{4,50}" id="{{ clist.id }}-firstname" title="First Names can only have letters. They must be 4-50 characters long."></td>
+							      			<td><input pattern="[A-Za-z]{4,50}" type="text" id="{{ clist.id }}-lastname" title="Last Names can only have letters. They must be 4-50 characters long."></td>
+							      			<td><input type="text" pattern="[0-9]{10}" id="{{ clist.id }}-phonenumber" title="Phone Numbers must be in a 10 character, number only format. 100-200-4343 translates to 1002004343."></td>
+							      			<td><input type="text" pattern="[A-Za-z0-9@._]{3,70}" id="{{ clist.id }}-email" title="An email address must be 3-70 characters long, without illegal characters. This field is required." required></td>
+							      			<td><button type="submit" value="login" class="btn btn-small createbtn" id="{{ clist.id }}-createbtn"><span class="glyphicon glyphicon-plus"></span> Create Contact</button></td>
 							      		</form>
 							      	</tr>
-							    </div>
 						    </tbody>
 						</table>
 					</div> <!-- contactlist panel content -->
