--- a/massinform/notify/templates/notify/notify.html
+++ b/massinform/notify/templates/notify/notify.html
@@ -39,16 +39,43 @@ $(document).ready(function(){
 		var clist_id = $(this).attr('id');
 		clist_id = clist_id.replace('-createbtn', '');
 		//Create table rows
-		alert('1')
+		
 		var firstname = $('#' + clist_id + "-firstname").val();
 		var lastname = $('#' + clist_id + "-lastname").val();
 		var phonenumber = $('#' + clist_id + "-phonenumber").val();
 		var email = $('#' + clist_id + "-email").val();
-
-		//Add table to server database
+		alert('imhere');
+		if($.inArray(email, existing_emails_and_numbers) > -1){
+			alert('A contact with this email address already exists.')
+		} else if ($.inArray(phonenumber, existing_emails_and_numbers) > -1) {
+			alert('A contact with this phone number already exists.')
+		} else if (email == "" && phonenumber == ""){
+			alert('A contact must have an email address or phone number.')
+		} else {
+			//Add table to server database
+			$.get("/notify/createcontact/", {contactlist: clist_id, new_firstname: firstname, new_lastname: lastname, new_phonenumber: phonenumber, new_email: email}, function(data){
+				//Contact created
+				window.location.reload(true);
+			});
+		}
+	});
+	
+	//Remove a contact
+	$(".removecontact").click(function(event){
+		event.preventDefault();
+		var $killrow = $(this).parent('tr');
+		var clist_id = $(this).attr('id');
+		clist_id = clist_id.replace('-removeContact', '');
 		alert('yo1');
-		$.get("/notify/createcontact/", {contactlist: clist_id, new_firstname: firstname, new_lastname: lastname, new_phonenumber: phonenumber, new_email: email}, function(data){
-			alert('yo');
+		//return window.confirm("Are you sure you want to delete this contact?");
+		$.get("/notify/deletecontact/", {contactlist: clist_id}, function(data){
+			alert('yo2');
+			//Contact deleted
+			if(data == "success"){
+				$killrow.fadeOut(200, function(){
+			    	$(this).remove();
+				});
+			}
 		});
 	});
 });
@@ -74,41 +101,41 @@ $(document).ready(function(){
 					<h4 class="smaller">{{ clist.name }}<button type="button" class="btn btn-primary" style="display: inline; margin-left: 20px;">Notify</button>
 						<small style="float: right;">Contact List</small></h4>
 				</div>
-					<div class="panel-body">
-						<table class="table table-hover" id="table">
-							<thead>
-								<tr>
-	  								<th>First Name</th>
-	  								<th>Last Name</th>
-	  								<th>Phone Number</th>
-	  								<th>E-mail address</th>
-	  								<th></th>
-  								</tr>
-							</thead>
-							<tbody>
-									{% for c in clist.contacts %}
-							    	<tr>
-							    		<td>{{ c.firstname }}</td>
-							        	<td>{{ c.lastname }}</td>
-							        	<td>{{ c.phonenumber }}</td>
-							        	<td>{{ c.email }}</td>
-							        	<td><button type="button" class="btn btn-default btn-xs" style="margin-right: -10px;" id="removeContact">
-		      								<span class="glyphicon glyphicon-remove"></span>
-		    							</button></span></td>
-							      	</tr>
-							      	{% endfor %}
-							      	<tr>
-							      		<form>
-							      			<td><input type="text" pattern="[A-Za-z]{4,50}" id="{{ clist.id }}-firstname" title="First Names can only have letters. They must be 4-50 characters long."></td>
-							      			<td><input pattern="[A-Za-z]{4,50}" type="text" id="{{ clist.id }}-lastname" title="Last Names can only have letters. They must be 4-50 characters long."></td>
-							      			<td><input type="text" pattern="[0-9]{10}" id="{{ clist.id }}-phonenumber" title="Phone Numbers must be in a 10 character, number only format. 100-200-4343 translates to 1002004343."></td>
-							      			<td><input type="text" pattern="[A-Za-z0-9@._]{3,70}" id="{{ clist.id }}-email" title="An email address must be 3-70 characters long, without illegal characters. This field is required." required></td>
-							      			<td><button type="submit" value="login" class="btn btn-small createbtn" id="{{ clist.id }}-createbtn"><span class="glyphicon glyphicon-plus"></span> Create Contact</button></td>
-							      		</form>
-							      	</tr>
-						    </tbody>
-						</table>
-					</div> <!-- contactlist panel content -->
+				<div class="panel-body">
+					<table class="table table-hover" id="table">
+						<thead>
+							<tr>
+  								<th>First Name</th>
+  								<th>Last Name</th>
+  								<th>Phone Number</th>
+  								<th>E-mail address</th>
+  								<th></th>
+							</tr>
+						</thead>
+						<tbody>
+								{% for c in clist.contacts %}
+						    	<tr>
+						    		<td>{{ c.firstname }}</td>
+						        	<td>{{ c.lastname }}</td>
+						        	<td>{{ c.phonenumber }}</td>
+						        	<td>{{ c.email }}</td>
+						        	<td><button type="button" class="btn btn-default btn-xs removecontact" style="margin-right: -10px;" id="{{ clist.id }}-removeContact">
+	      								<span class="glyphicon glyphicon-remove"></span>
+	    							</button></span></td>
+						      	</tr>
+						      	{% endfor %}
+						      	<tr>
+						      		<form>
+						      			<td><input type="text" pattern="[A-Za-z]{4,50}" id="{{ clist.id }}-firstname" title="First Names can only have letters. They must be 4-50 characters long."></td>
+						      			<td><input pattern="[A-Za-z]{4,50}" type="text" id="{{ clist.id }}-lastname" title="Last Names can only have letters. They must be 4-50 characters long."></td>
+						      			<td><input type="text" pattern="[0-9]{10}" id="{{ clist.id }}-phonenumber" title="Phone Numbers must be in a 10 character, number only format. 100-200-4343 translates to 1002004343."></td>
+						      			<td><input type="text" pattern="[A-Za-z0-9@._]{3,70}" id="{{ clist.id }}-email" title="An email address must be 3-70 characters long, without illegal characters. This field is required." required></td>
+						      			<td><button type="submit" value="login" class="btn btn-small createbtn" id="{{ clist.id }}-createbtn"><span class="glyphicon glyphicon-plus"></span> Create Contact</button></td>
+						      		</form>
+						      	</tr>
+					    </tbody>
+					</table>
+				</div> <!-- contactlist panel content -->
 			</div> <!--contactlist panel -->
 			{% endfor %}
 		</div> <!-- column -->
