--- a/massinform/notify/templates/notify/notify.html
+++ b/massinform/notify/templates/notify/notify.html
@@ -39,12 +39,12 @@ $(document).ready(function(){
 		var clist_id = $(this).attr('id');
 		clist_id = clist_id.replace('-createbtn', '');
 		//Create table rows
-		
+
 		var firstname = $('#' + clist_id + "-firstname").val();
 		var lastname = $('#' + clist_id + "-lastname").val();
 		var phonenumber = $('#' + clist_id + "-phonenumber").val();
 		var email = $('#' + clist_id + "-email").val();
-		alert('imhere');
+
 		if($.inArray(email, existing_emails_and_numbers) > -1){
 			alert('A contact with this email address already exists.')
 		} else if ($.inArray(phonenumber, existing_emails_and_numbers) > -1) {
@@ -62,26 +62,57 @@ $(document).ready(function(){
 	
 	//Remove a contact
 	$(".removecontact").click(function(event){
+		//Get row of table and resulting information
+		var $row = $(this).closest("tr");
+		var phonenumber = $row.find("td:nth-child(3)").text();
+		var email = $row.find("td:nth-child(4)").text()
+
+		//Dynamically kill the row and get clist_id
 		event.preventDefault();
-		var $killrow = $(this).parent('tr');
 		var clist_id = $(this).attr('id');
 		clist_id = clist_id.replace('-removeContact', '');
-		alert('yo1');
 		//return window.confirm("Are you sure you want to delete this contact?");
-		$.get("/notify/deletecontact/", {contactlist: clist_id}, function(data){
-			alert('yo2');
+		$.get("/notify/deletecontact", {contactlist: clist_id, email: email, phonenumber: phonenumber}, function(data){
 			//Contact deleted
-			if(data == "success"){
-				$killrow.fadeOut(200, function(){
-			    	$(this).remove();
-				});
-			}
+			window.location.reload(true);
 		});
+	});
+
+	$('#notModal').on('show.bs.modal', function(e) {
+    	var clist_id = $(e.relatedTarget).data('clist-id');
+    	$(e.currentTarget).find('input[name="clist_id"]').val(clist_id);
 	});
 });
 {% endblock %}
 
 {% block body %}
+<!-- Modal -->
+<div id="notModal" class="modal fade" role="dialog">
+  <div class="modal-dialog">
+
+    <!-- Modal content-->
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal">&times;</button>
+        <h4 class="modal-title">Notify your Contacts</h4>
+      </div>
+      <div class="modal-body">
+        <form method="post" action="/notify/" role="form">
+        	{% csrf_token %}
+        	<div class="form-group">
+			    <label for="content">Notification Text:</label>
+				<textarea maxlength="320" class="form-control" rows="3" placeholder="Enter your notification here" required id="content" name="content" pattern="[.]{4,400}" title="A notification must be 4-400 characteres long."></textarea>
+				<input type="hidden" name="clist_id" id="clist_id" value=""/>
+			</div>
+			<button value="notify" type="submit" class="btn btn-primary">Notify</button>
+		</form>
+      </div>
+    </div>
+
+  </div>
+</div>
+
+<!-- page content -->
 	<a href="/index/"><span class="glyphicon glyphicon-home" id="homebutton"></span></a>
 	<a href="/logout/"><span class="glyphicon glyphicon-off" id="signout"></span></a>
 <div class="container-fluid">
@@ -98,7 +129,8 @@ $(document).ready(function(){
 		{% for clist in contactlists %}
 			<div class="panel panel-default">
 				<div class="panel-heading">
-					<h4 class="smaller">{{ clist.name }}<button type="button" class="btn btn-primary" style="display: inline; margin-left: 20px;">Notify</button>
+					<h4 class="smaller">{{ clist.name }}
+							<button type="button" class="btn btn-primary" data-toggle="modal" href="#notModal" data-clist-id="{{ clist.id }}" style="display: inline; margin-left: 20px;">Notify</button>
 						<small style="float: right;">Contact List</small></h4>
 				</div>
 				<div class="panel-body">
@@ -117,8 +149,8 @@ $(document).ready(function(){
 						    	<tr>
 						    		<td>{{ c.firstname }}</td>
 						        	<td>{{ c.lastname }}</td>
-						        	<td>{{ c.phonenumber }}</td>
-						        	<td>{{ c.email }}</td>
+						        	<td class="phonenumber">{{ c.phonenumber }}</td>
+						        	<td class="email">{{ c.email }}</td>
 						        	<td><button type="button" class="btn btn-default btn-xs removecontact" style="margin-right: -10px;" id="{{ clist.id }}-removeContact">
 	      								<span class="glyphicon glyphicon-remove"></span>
 	    							</button></span></td>
